# code-injection-example

./: .gitignore  README.md  injection_code.py  injector.py  pyproject.toml  user_code.py
new_interceptor_examples/code_injection/: pyproject.toml
new_interceptor_examples/code_injection/qiskit_interceptor/: __init__.py  __init__.py~  analyze.py  interceptor.py  user_code_runner.py
new_interceptor_examples/code_injection/qiskit_interceptor/framework/: braket_dwave.py  braket_dwave_dry_run_interceptor.py  braket_dwave_extract_interceptor.py  braket_dwave_inject_backend_interceptor.py  dwave_dry_run_interceptor.py  dwave_extract_interceptor.py  dwave_inject_backend_interceptor.py
new_interceptor_examples/code_injection/user_code/test_package/user_code/: __main__.py
new_interceptor_examples/qiskit_code_injection/: README.md
other_examples/braket_code_injection/: NOTICE  pyproject.toml
other_examples/braket_code_injection/braket_interceptor/: __init__.py  __main__.py  analyze.py  braket_monkey_patch.py  dry_run_interceptor.py  extract_sampler_interceptor.py  interceptor.py  user_code_runner.py
other_examples/braket_code_injection/user_code/test_package/user_code/: __init__.py
other_examples/dwave_code_injection/: pyproject.toml
other_examples/dwave_code_injection/dwave_interceptor/: __init__.py  __main__.py  dry_run_interceptor.py  dwave_monkey_patch.py  interceptor.py  user_code_runner.py
other_examples/dwave_code_injection/user_code/test_file/: user_code.py
qiskit_interceptor/: __init__.py  __main__.py  analyze.py  dry_run_interceptor.py  extract_circuit_interceptor.py  interceptor.py  qiskit_monkey_patch.py  user_code_runner.py
qiskit_interceptor/framework/: __init__.py  qiskit.py  qiskit_extract_circuit_interceptor.py  (+1 more)
(+24 files in other folders)
